influxdb3-plugin-schemas/tests/snapshots/parse_fixtures__invalid_manifest_manifest_exclude_non_string.toml.snap
---
source: influxdb3-plugin-schemas/tests/parse_fixtures.rs
expression: errors.to_string()
---
TOML parse error: TOML parse error at line 8, column 12
  |
8 | exclude = [1, 2]
  |            ^
invalid type: integer `1`, expected a string
